Simplifying JavaResource class